<resources>
    <string name="app_name">debugging news</string>
    <string name="news_feed">News Feed</string>
    <string name="home">Home</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="scroll">scroll</string>
    <string name="specific_news">Specific News</string>
    <string name="andar_ki_news_sabse_tez">ANDAR KI NEWS (SABSE TEZ)</string>
</resources>